NetBSD Problem Report #46172

From www@NetBSD.org  Sun Mar 11 04:11:49 2012
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 44CB163E0EE
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 11 Mar 2012 04:11:49 +0000 (UTC)
Message-Id: <20120311041148.B4A1663BFFC@www.NetBSD.org>
Date: Sun, 11 Mar 2012 04:11:48 +0000 (UTC)
From: henning.petersen@t-online.de
Reply-To: henning.petersen@t-online.de
To: gnats-bugs@NetBSD.org
Subject: Missing function miPointerAbsoluteCursor for sis_driver.
X-Send-Pr-Version: www-1.0

>Number:         46172
>Category:       xsrc
>Synopsis:       Missing function miPointerAbsoluteCursor for sis_driver.
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    martin
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Mar 11 04:15:00 +0000 2012
>Closed-Date:    Wed Jun 13 19:32:25 +0000 2012
>Last-Modified:  Wed Jun 13 19:32:25 +0000 2012
>Originator:     Henning Petersen
>Release:        
>Organization:
>Environment:
>Description:
Function miPointerAbsoluteCursor is removed in 2009 (ChangeLog).
>How-To-Repeat:

>Fix:
Unknown.

>Release-Note:

>Audit-Trail:
From: henning petersen <henning.petersen@t-online.de>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: xsrc/46172: Missing function miPointerAbsoluteCursor for sis_driver.
Date: Wed, 14 Mar 2012 14:27:18 +0100

 This is a multi-part message in MIME format.
 --------------070403080609070304090708
 Content-Type: text/plain; charset=ISO-8859-15
 Content-Transfer-Encoding: 7bit

 Am 11.03.2012 05:15, schrieb gnats-admin@netbsd.org:
 > Thank you very much for your problem report.
 > It has the internal identification `xsrc/46172'.
 > The individual assigned to look at your
 > report is: xsrc-manager. 
 >
 >> Category:       xsrc
 >> Responsible:    xsrc-manager
 >> Synopsis:       Missing function miPointerAbsoluteCursor for sis_driver.
 >> Arrival-Date:   Sun Mar 11 04:15:00 +0000 2012
 >
 Function miPointerAbsoluteCursor is to be replaced with
 miPointerSetPosition.



 --------------070403080609070304090708
 Content-Type: text/plain; charset=windows-1252;
  name="sis_driver.c.diff"
 Content-Transfer-Encoding: 7bit
 Content-Disposition: attachment;
  filename="sis_driver.c.diff"

 diff -u -p -r1.1.1.4 sis_driver.c
 --- xf86-video-sis/dist/src/sis_driver.c	17 Jul 2010 06:32:06 -0000	1.1.1.4
 +++ xf86-video-sis/dist/src/sis_driver.c	13 Mar 2012 14:25:21 -0000
 @@ -86,6 +86,8 @@
  #include <X11/extensions/dpms.h>
  #endif

 +#include <inputstr.h>	/* for inputInfo */
 +

  #ifdef XF86DRI
  #include "dri.h"
 @@ -9322,9 +9324,8 @@ SISMergedPointerMoved(int scrnIndex, int
  	}
       }
       if(doit) {
 -	UpdateCurrentTime();
  	sigstate = xf86BlockSIGIO();
 -	miPointerAbsoluteCursor(x, y, currentTime.milliseconds);
 +	miPointerSetPosition(inputInfo.pointer, x, y);
  	xf86UnblockSIGIO(sigstate);
  	return;
       }

 --------------070403080609070304090708--

Responsible-Changed-From-To: xsrc-manager->martin
Responsible-Changed-By: martin@NetBSD.org
Responsible-Changed-When: Wed, 14 Mar 2012 13:48:51 +0000
Responsible-Changed-Why:
Patch commited, does it work for you now?


State-Changed-From-To: open->feedback
State-Changed-By: martin@NetBSD.org
State-Changed-When: Wed, 14 Mar 2012 13:48:51 +0000
State-Changed-Why:
commited


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/46172 CVS commit: xsrc/external/mit/xf86-video-sis/dist/src
Date: Wed, 14 Mar 2012 13:47:41 +0000

 Module Name:	xsrc
 Committed By:	martin
 Date:		Wed Mar 14 13:47:40 UTC 2012

 Modified Files:
 	xsrc/external/mit/xf86-video-sis/dist/src: sis_driver.c

 Log Message:
 henning petersen in PR xsrc/46172: do not used removed function
 miPointerAbsoluteCursor(), replace with miPointerSetPosition().


 To generate a diff of this commit:
 cvs rdiff -u -r1.1.1.4 -r1.2 \
     xsrc/external/mit/xf86-video-sis/dist/src/sis_driver.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 13 Jun 2012 19:32:25 +0000
State-Changed-Why:
Submitter wrote to the gnats-admin sinkhole to confirm it fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.