henning petersen in PR xsrc/46172: do not used removed function miPointerAbsoluteCursor(), replace with miPointerSetPosition().